Fixed header transparency alignment for webkit

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/app';
 
 .root {
+  width: 100vw;
   justify-content: flex-end !important;
   @media (max-width: breakpoint-max(sm)) {
     margin-bottom: 50px;
@@ -12,6 +13,7 @@
 
   //Add gradient and line it up with the main gradient so it appears seamless. 
   background: $main-gradient-trans;
+  
   background-attachment: fixed;
   transition: box-shadow 0.3s;
 
@@ -365,7 +367,11 @@
 .headerShadow{
   // border-bottom: 0.1px solid $inverse;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);
-  backdrop-filter: blur(20px);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  
+  //help resolve webkit backdrop rendering issue
+  position: fixed;
 }
 
 .countryDate{
